-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# Internal Error (/oracle/valhalla1/open/src/hotspot/share/runtime/sharedRuntime.cpp:1151), pid=2814, tid=2815
# assert(bc == Bytecodes::_invokeinterface) failed: anything else?
Stack: [0x00007ffac2210000,0x00007ffac2311000], sp=0x00007ffac230a760, free space=1001k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15cd3c9] SharedRuntime::find_callee_info_helper(JavaThread*, vframeStream&, Bytecodes::Code&, CallInfo&, Thread*)+0x9b9
V [libjvm.so+0x15ce60e] SharedRuntime::resolve_sub_helper(JavaThread*, bool, bool, bool*, Thread*)+0x21e
V [libjvm.so+0x15ceb43] SharedRuntime::resolve_helper(JavaThread*, bool, bool, bool*, Thread*)+0x53
V [libjvm.so+0x15cf202] SharedRuntime::resolve_opt_virtual_call_C(JavaThread*)+0xb2
v ~RuntimeStub::resolve_opt_virtual_call
J 305 c2 compiler.valhalla.valuetypes.TestCallingConvention.test37(Qcompiler/valhalla/valuetypes/TestCallingConvention$Test37Value;)I (8 bytes) @ 0x00007ffab0af1fa8 [0x00007ffab0af1ee0+0x00000000000000c8]
j compiler.valhalla.valuetypes.TestCallingConvention.test37_verifier(Z)V+7
v ~StubRoutines::call_stub
V [libjvm.so+0xde259c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x73c
V [libjvm.so+0x1566c0e] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.108]+0xc5e
V [libjvm.so+0x1567dd4] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x204
V [libjvm.so+0xf79aea] JVM_InvokeMethod+0x33a
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+785
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
j compiler.valhalla.valuetypes.TestCallingConvention.main([Ljava/lang/String;)V+69
v ~StubRoutines::call_stub
V [libjvm.so+0xde259c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x73c
V [libjvm.so+0xecbf15] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.167] [clone .constprop.258]+0x275
V [libjvm.so+0xef4fbf] jni_CallStaticVoidMethod+0x1ff
C [libjli.so+0x4ce3] JavaMain+0xbd3
C [libjli.so+0x8189] ThreadJavaMain+0x9
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~RuntimeStub::resolve_opt_virtual_call
J 305 c2 compiler.valhalla.valuetypes.TestCallingConvention.test37(Qcompiler/valhalla/valuetypes/TestCallingConvention$Test37Value;)I (8 bytes) @ 0x00007ffab0af1fa8 [0x00007ffab0af1ee0+0x00000000000000c8]
j compiler.valhalla.valuetypes.TestCallingConvention.test37_verifier(Z)V+7
v ~StubRoutines::call_stub
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+785
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
j compiler.valhalla.valuetypes.TestCallingConvention.main([Ljava/lang/String;)V+69
v ~StubRoutines::call_stub
Register to memory mapping:
# assert(bc == Bytecodes::_invokeinterface) failed: anything else?
Stack: [0x00007ffac2210000,0x00007ffac2311000], sp=0x00007ffac230a760, free space=1001k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15cd3c9] SharedRuntime::find_callee_info_helper(JavaThread*, vframeStream&, Bytecodes::Code&, CallInfo&, Thread*)+0x9b9
V [libjvm.so+0x15ce60e] SharedRuntime::resolve_sub_helper(JavaThread*, bool, bool, bool*, Thread*)+0x21e
V [libjvm.so+0x15ceb43] SharedRuntime::resolve_helper(JavaThread*, bool, bool, bool*, Thread*)+0x53
V [libjvm.so+0x15cf202] SharedRuntime::resolve_opt_virtual_call_C(JavaThread*)+0xb2
v ~RuntimeStub::resolve_opt_virtual_call
J 305 c2 compiler.valhalla.valuetypes.TestCallingConvention.test37(Qcompiler/valhalla/valuetypes/TestCallingConvention$Test37Value;)I (8 bytes) @ 0x00007ffab0af1fa8 [0x00007ffab0af1ee0+0x00000000000000c8]
j compiler.valhalla.valuetypes.TestCallingConvention.test37_verifier(Z)V+7
v ~StubRoutines::call_stub
V [libjvm.so+0xde259c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x73c
V [libjvm.so+0x1566c0e] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.108]+0xc5e
V [libjvm.so+0x1567dd4] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x204
V [libjvm.so+0xf79aea] JVM_InvokeMethod+0x33a
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+785
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
j compiler.valhalla.valuetypes.TestCallingConvention.main([Ljava/lang/String;)V+69
v ~StubRoutines::call_stub
V [libjvm.so+0xde259c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x73c
V [libjvm.so+0xecbf15] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.167] [clone .constprop.258]+0x275
V [libjvm.so+0xef4fbf] jni_CallStaticVoidMethod+0x1ff
C [libjli.so+0x4ce3] JavaMain+0xbd3
C [libjli.so+0x8189] ThreadJavaMain+0x9
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~RuntimeStub::resolve_opt_virtual_call
J 305 c2 compiler.valhalla.valuetypes.TestCallingConvention.test37(Qcompiler/valhalla/valuetypes/TestCallingConvention$Test37Value;)I (8 bytes) @ 0x00007ffab0af1fa8 [0x00007ffab0af1ee0+0x00000000000000c8]
j compiler.valhalla.valuetypes.TestCallingConvention.test37_verifier(Z)V+7
v ~StubRoutines::call_stub
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+785
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
j compiler.valhalla.valuetypes.TestCallingConvention.main([Ljava/lang/String;)V+69
v ~StubRoutines::call_stub
Register to memory mapping: