8238948: [lworld] Method resolution does not handle invokespecial with scalarized receiver

Reviewed-by: fparain